--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Test-Snapshot
 
+0.04	Thu Jan 11 01:55:54 GMT 2018
+ - instead use App::Prove
+
 0.03	Mon Jan  8 10:28:49 GMT 2018
  - use perl -S to find correct prove in test
 
